docker-compose.yaml file postgres service edited.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,13 +5,14 @@ services:
     container_name: etaskify_postgres
     image: postgres
     environment:
-      POSTGRES_USER: ${POSTGRES_USER:-sacramento}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-eTaskify}
+      POSTGRES_USER: ${POSTGRES_USER:-admin}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-admin}
+      POSTGRES_DB: ${POSTGRESS_DB:-etaskify}
       PGDATA: /data/postgres
     volumes:
       - postgres:/data/postgres
     ports:
-      - "5432:5432"
+      - "5433:5432"
     networks:
       - postgres
     restart: unless-stopped
@@ -20,8 +21,8 @@ services:
     container_name: etaskify_pgadmin
     image: dpage/pgadmin4
     environment:
-      PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL:-sacramento@etaskify.org}
-      PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD:-eTaskify}
+      PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL:-admin@etaskify.org}
+      PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD:-admin}
       PGADMIN_CONFIG_SERVER_MODE: 'False'
     volumes:
       - pgadmin:/var/lib/pgadmin
