--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,1 +1,17 @@
+spring:
+  jpa:
+    hibernate:
+      ddl-auto: none
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQL9Dialect
 
+  datasource:
+    url: jdbc:postgresql://postgres:5432/etaskify
+    driver-class-name: org.postgresql.Driver
+    username: admin
+    password: admin
+
+  liquibase:
+    default-schema: etaskify
+    enabled: false
