Entity classes and their relations implemented.

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,13 +1,15 @@
 spring:
   jpa:
     hibernate:
-      ddl-auto: none
+      ddl-auto: create-drop
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQL9Dialect
+    show-sql: true
+    generate-ddl: true
 
   datasource:
-    url: jdbc:postgresql://postgres:5432/etaskify
+    url: jdbc:postgresql://localhost:5433/etaskify
     driver-class-name: org.postgresql.Driver
     username: admin
     password: admin
@@ -15,3 +17,4 @@ spring:
   liquibase:
     default-schema: etaskify
     enabled: false
+
