--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,7 +1,3 @@
-api:
-  name: eTaskify Rest API
-  version: v1.0
-
 server:
   port: 8081
   error:
@@ -25,7 +21,22 @@ spring:
     username: admin
     password: admin
 
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: noreply.etaskify@gmail.com
+    password: DXF4VISS
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
+
   liquibase:
     default-schema: etaskify
     enabled: false
 
+springdoc:
+  swagger-ui:
+    operations-sorter: method
